[package]
name = "gitea-ai-review"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.30.1"
axum = "0.8.6"
reqwest = { version = "0.12.24", default-features = false, features = ["charset", "http2", "rustls-tls"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
