[package]
name = "gitea-ai-review"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-openai = "0.30.1"
axum = "0.8.6"
env_logger = "0.11.8"
gitea-sdk = "0.6.0"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
